// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remax render change elements' order 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {
            "data-rid": 2,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {
            "data-rid": 4,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 6,
          "props": Object {
            "data-rid": 6,
          },
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 7,
      "props": Object {
        "data-rid": 7,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render change elements' order 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {
            "data-rid": 4,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {
            "data-rid": 2,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 6,
          "props": Object {
            "data-rid": 6,
          },
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 7,
      "props": Object {
        "data-rid": 7,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render change elements' order 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {
            "data-rid": 4,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 6,
          "props": Object {
            "data-rid": 6,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {
            "data-rid": 2,
          },
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 7,
      "props": Object {
        "data-rid": 7,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render insert new element 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {
            "data-rid": 2,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {
            "data-rid": 4,
          },
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {
        "data-rid": 5,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render insert new element 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {
            "data-rid": 2,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 7,
          "props": Object {
            "data-rid": 7,
          },
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {
            "data-rid": 4,
          },
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {
        "data-rid": 5,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render render correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 3,
      "props": Object {
        "className": "foo",
        "data-rid": 3,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 1,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render render native component correctly 1`] = `
Array [
  Object {
    "root.children": Array [
      0,
      0,
      Object {
        "children": Array [],
        "id": 1,
        "props": Object {
          "class": "class",
          "data-rid": 1,
          "fooBar": "fooBar",
          "onClick": "$$REMAX_METHOD_1_onClick",
        },
        "text": undefined,
        "type": "native-component",
      },
    ],
  },
]
`;

exports[`remax render renders conditional fragment correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "one",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "data-rid": 2,
      },
      "text": undefined,
      "type": "view",
    },
    Object {
      "children": Array [
        Object {
          "text": "two",
          "type": "plain-text",
        },
      ],
      "id": 4,
      "props": Object {
        "data-rid": 4,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders conditional fragment correctly 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "foo",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "data-rid": 2,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders empty style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "data-rid": 2,
        "style": "",
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "data-rid": 2,
        "style": Object {
          "height": "100px",
          "width": "100px",
        },
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders vendor prefix style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "data-rid": 2,
        "style": Object {
          "WebkitLineClamp": 2,
          "height": "100px",
        },
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render umount component 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "foo",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {
            "data-rid": 2,
          },
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 3,
      "props": Object {
        "data-rid": 3,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render umount component 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": 3,
      "props": Object {
        "data-rid": 3,
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;
